Started CARGO-803 : Add geronimo2x support